Prevent scroll overflow to navigate page on UA inspection

--- a/src/www/janitor/css/seg_desktop.css
+++ b/src/www/janitor/css/seg_desktop.css
@@ -1280,6 +1280,7 @@ body.invoice #content div.scene .all_items ul.items li span.amount {float: right
 #content .scene.purgeUseragentRegex li h3.deleted {background: #df0000;}
 #content .scene.purgeUseragentRegex li h3.updated {background: green;}
 #content .scene.purgeUseragentRegex li h3.trimmed-to-death {background: orange;}
+#content .scene.purgeUseragentRegex li div.uas {overflow-x: auto;}
 #content .scene.purgeUseragentRegex li h4 {padding-bottom: 8px; white-space: pre;}
 #content .scene.purgeUseragentRegex li h4 span.trimmed {background-color: #df0000; color: #ffffff; white-space: pre;}
 body.device #navigation .device a,
